       performance of the subtable search.
     * Add Linux AF_XDP support through a new experimental netdev type "afxdp".
   - OVSDB:
     * OVSDB clients can now resynchronize with clustered servers much more
       quickly after a brief disconnection, saving bandwidth and CPU time.
       See section 4.1.15 of ovsdb-server(7) for details of related OVSDB
       protocol extension.
   - OVN:
     * IPAM/MACAM:
       - select IPAM mac_prefix in a random manner if not provided by the user
       - add the capability to specify a static IPv4 and/or IPv6 address and
         get the L2 one allocated dynamically using the following syntax:
           ovn-nbctl lsp-set-addresses <port> "dynamic <IPv4 addr> <IPv6 addr>"
     * Added the HA chassis group support.
     * Added 'external' logical port support.
     * Added Policy-based routing(PBR) support to create permit/deny/reroute
       policies on the logical router. New table(Logical_Router_Policy) added in
       OVN-NB schema. New "ovn-nbctl" commands to add/delete/list PBR policies.
     * Support for Transport Zones, a way to separate chassis into
       logical groups which results in tunnels only been formed between
       members of the same transport zone(s).
     * Support for IGMP Snooping and IGMP Querier.
   - New QoS type "linux-netem" on Linux.
   - Added support for TLS Server Name Indication (SNI).
   - Linux datapath:
     * Support for the kernel versions 4.19.x and 4.20.x.
     * Support for the kernel version 5.0.x.
   - 'ovs-dpctl dump-flows' is no longer suitable for dumping offloaded flows.
     'ovs-appctl dpctl/dump-flows' should be used instead.
   - Add L2 GRE tunnel over IPv6 support.

v2.11.0 - 19 Feb 2019
---------------------
   - OpenFlow:
     * OFPMP_TABLE_FEATURES_REQUEST can now modify table features.
   - ovs-ofctl:
     * "mod-table" command can now change OpenFlow table names.
   - ovn:
     * OVN-SB schema changed: duplicated IP with same Encapsulation type